style: fix cutoff accent icons on realisation cards by setting overflow visible

--- a/realisations.css
+++ b/realisations.css
@@ -52,6 +52,7 @@
     height: 250px;
     width: 100%;
     aspect-ratio: auto;
+    overflow: visible !important;
 }
 
 .realisation-image img {
